--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:run": "yarn build && npx typeorm migration:run -d dist/database/orm-cli-config.js"
+    "test:e2e": "jest --runInBand --config ./jest.e2e.config.ts",
+    "migration:run": "yarn build && npx typeorm migration:run -d dist/src/database/orm-cli-config.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
